--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: paypal_sdk_flutter
 description: Wrapper around Android native paypal SDK and IOS native paypal SDK.
-version: 0.0.1
+version: 0.0.1+hotfix.1
 #author: Blasanka95@gmail.com
 homepage: https://github.com/Blasanka/paypal_flutter_sdk
 
